# dotfiles

./: .arch-conf.yml  .conf.yml  .env  .env.example  .gitignore  .gitmodules  .mac-conf.yml  .pre-commit-config.yaml  AGENT.md  AGENTS.md  Dockerfile  LICENSE  README.md  TODO.md  install  pyproject.toml
.github/workflows/: tests.yml
apps/specdex/: .dex.toml  .gitignore  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  install.sh
apps/specdex/apps/desktop/: Cargo.toml  build.rs  install.sh  tauri.conf.json
apps/specdex/apps/desktop/capabilities/: default.json
apps/specdex/apps/desktop/icons/: icon.icns
apps/specdex/apps/desktop/src/: main.rs
apps/specdex/apps/desktop/ui/: DESIGN.md  app.js  drams-button-variants.html  drams-components.html  index.html  style.css
apps/specdex/apps/desktop/ui/mockups/: agents-options.html  layout-options.html  list-cells-variants.html  live-team-screen.html  logo-options.html  sidebar-options.html
apps/specdex/crates/cli/: Cargo.toml
apps/specdex/crates/cli/src/: main.rs
apps/specdex/crates/core/: Cargo.toml
apps/specdex/crates/core/src/: config.rs  curator.rs  event.rs  lessons.rs  lib.rs  notes.rs  paths.rs  ports.rs  state.rs  swarm.rs  terminal.rs  view.rs
config/: .bashrc  .zimrc  .zshrc  .zshrc_arch  .zshrc_mac  vencord.css
config/aerospace/: aerospace.toml
config/aichat/: config.yaml
config/alacritty/: alacritty.yml
config/amethyst/: .amethyst.yml
config/atuin/: config.toml
config/bat/: bat.conf
config/borders/: bordersrc  com.user.borders.plist
config/btop/: btop.conf
config/claude/: settings.json
config/discord/: settings.json
config/dunst/: dunstrc
config/eza/: .ezarc
config/factory/: mcp.json
config/fastfetch/: config.jsonc
config/gammastep/: config.ini
config/ghostty/: config
config/git/: .gitconfig
config/gitkraken/: config
config/gtk-2.0/: gtkrc
config/gtk-3.0/: settings.ini
config/gtk-4.0/: settings.ini
config/helix/: config.toml  languages.toml
config/hypr/: hypridle.conf  hyprland.conf  hyprlock.conf  hyprshade.toml
config/iterm2/: Default.json
config/karabiner/: karabiner.json
config/keybindings-helper/: show_keybindings.py
config/kitty/: kitty.conf
config/lazydocker/: config.yml
config/lazygit/: config.yml
config/micro/: bindings.json  settings.json
config/mise/: config.toml
config/pi/: settings.json
config/picom/: picom.conf  picom.conf.qtile
config/posh/: config.json
config/procs/: config.toml
config/qtile/: config.py
config/rio/: config.toml
config/rofi/: config.rasi  theme.rasi
config/starship/: config.toml
config/usql/: .usqlrc  config.yaml
config/waybar/: colors.css  config  style.css
config/wlogout/: init.sh  layout  style.css  theme.css
config/yazi/: theme.toml
config/zed/: .rules  keymap.json  (+6 more)
dot/: .arch-conf.yml  .mac-conf.yml  install
os/homeserver/config/sync-service/: app.py  pyproject.toml
os/homeserver/config/sync-service/templates/: index.html
shell/: aliases.sh  exports.sh  functions.sh  kube-ps1.sh  main.sh
(+361 files in other folders)
