[tool.poetry]
name = "monodot"
version = "0.1.0"
description = ""
authors = ["Andres Ortiz <andres.ortiz@clarity.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dotbot = "^1.20"
typer = "^0.12"
result = "^0.17"
python-dotenv = "^1.0.1"

loguru = "^0.7.2"
fastapi = "^0.112.0"
langchain = "^0.2.14"
langchain-ollama = "^0.1.1"
langchain-community = "^0.2.12"

httpx = "^0.27.0"
polars = "^1.5.0"
beautifulsoup4 = "^4.12.3"
redis = "^5.0.8"
redisvl = "^0.3.0"
jinja2 = "^3.1.4"
uvicorn = "^0.30.6"
python-multipart = "^0.0.9"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
monodot = "monodot.main:app"

[tool.mypy]
plugins = ["returns.contrib.mypy.returns_plugin"]
