[workspace]
resolver = "2"
members = ["crates/core", "crates/cli", "apps/desktop"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
dirs = "5"
toml = "0.8"
notify = "6"
include_dir = "0.7"
clap = { version = "4", features = ["derive", "env"] }

[profile.release]
lto = "thin"
strip = true
