[package]
name = "specdex-desktop"
edition.workspace = true
version.workspace = true

[[bin]]
name = "specdex-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
specdex-core = { path = "../../crates/core" }
tauri = { version = "2", features = [] }
notify.workspace = true
serde_json.workspace = true
chrono.workspace = true
