[project]
name = "homeserver-sync"
version = "0.1.0"
description = "Homeserver configuration sync service"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "jinja2>=3.1.4",
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
